[gd_scene load_steps=33 format=2]

[ext_resource path="res://assets/3 Objects/Catch/1.png" type="Texture" id=1]
[ext_resource path="res://assets/3 Objects/Catch/2.png" type="Texture" id=2]
[ext_resource path="res://assets/3 Objects/Catch/4.png" type="Texture" id=3]
[ext_resource path="res://assets/3 Objects/Catch/5.png" type="Texture" id=4]
[ext_resource path="res://assets/3 Objects/Catch/3.png" type="Texture" id=5]
[ext_resource path="res://assets/3 Objects/Catch/6.png" type="Texture" id=6]
[ext_resource path="res://assets/3 Objects/Catch/7.png" type="Texture" id=7]
[ext_resource path="res://assets/3 Objects/Catch/8.png" type="Texture" id=8]
[ext_resource path="res://Scenes/Fish.gd" type="Script" id=9]

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 12, 6 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 12, 0, 12, 6 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 20, 0, 20, 12 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 26, 12 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 26, 0, 26, 12 )

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 30, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 30, 0, 30, 12 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 28, 0, 28, 24 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 12 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 54, 22 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 54, 0, 54, 22 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "Goldie",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "Flattie",
"speed": 5.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "Sharkie",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "Stripie",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "Mantie",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Anglie",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Carpie",
"speed": 4.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "Sharpie",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=18]
extents = Vector2( 27.5, 10 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 51, 19.5 )

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 8.125, 5.625 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 18.75, 10 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 15.625, 6.875 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 23.125, 16.25 )

[node name="Fish" type="RigidBody2D" groups=["fish"]]
mode = 2
gravity_scale = 0.0
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 17 )
animation = "Anglie"
playing = true
offset = Vector2( -0.087, 0 )

[node name="MantieStripeSharkieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 18 )

[node name="SharpieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 19 )
disabled = true

[node name="GoldieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 20 )
disabled = true

[node name="FlattieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 21 )
disabled = true

[node name="CarpieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 22 )
disabled = true

[node name="AnglieCollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 23 )
disabled = true

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
scale = Vector2( 1.1875, 1 )

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
